--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 
+[tool.poetry.scripts]
+server = "server.server:run"
 
 [build-system]
 requires = ["poetry-core"]
